// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeadLine /> blueHeaderNormalH3 should be rendered properly 1`] = `
<Title
  className="blueHeader alignCenter undefined arial"
  level={3}
>
  Header h3
</Title>
`;

exports[`<HeadLine /> condensedHeaderNormalH3 should be rendered properly 1`] = `
<Title
  className="undefined arial"
  level={3}
>
  Header h3
</Title>
`;

exports[`<HeadLine /> headerBoldH1 should be rendered properly 1`] = `
<Title
  className="bold undefined"
>
  Header h1
</Title>
`;

exports[`<HeadLine /> headerNormalH2 should be rendered properly 1`] = `
<Title
  className="undefined undefined"
  level={2}
>
  Header h2
</Title>
`;

exports[`<HeadLine /> headerNormalH3 should be rendered properly 1`] = `
<Title
  className="undefined undefined"
  level={3}
>
  Header h3
</Title>
`;
